[package]
name = "my-project003"
version = "0.1.0"
authors = ["南沢郁男 <fmsoft@yahoo.co.jp>"]
edition = "2018"
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/minamisawafumio/my-project003"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"